--- a/Precision.html
+++ b/Precision.html
@@ -62,6 +62,40 @@
             background-color: #153e54;
             color: white;
         }
+        /* 提交框樣式 */
+        .email-form {
+            background-color: #f8f8f8;
+            padding: 20px;
+            text-align: center;
+        }
+        .email-form p {
+            font-size: 18px;
+            color: #153e54;
+            margin: 0 0 15px;
+        }
+        .email-form input[type="email"], .email-form input[type="text"] {
+            padding: 10px;
+            font-size: 16px;
+            width: 300px;
+            max-width: 100%;
+            border: 1px solid #153e54;
+            border-radius: 5px;
+            margin: 5px 10px 5px 0;
+        }
+        .email-form input[type="submit"] {
+            padding: 10px 20px;
+            background-color: #ffffff;
+            color: #153e54;
+            border: 1px solid #153e54;
+            border-radius: 5px;
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        .email-form input[type="submit"]:hover {
+            background-color: #153e54;
+            color: white;
+        }
         /* 圖片區域樣式 */
         .banner-image {
             width: 100%;
@@ -139,7 +173,7 @@
     <!-- 頁首 -->
     <header class="header">
         <img src="Precision%20Logo.png" alt="公司標誌">
-        <h1>精準會計師事務所有限公司<br>Precision Insight CPA Limited</h1>
+        <h1>精準會計師事務所有限公司<br>Precision Insights CPA Limited</h1>
     </header>
 
     <!-- 導航欄 -->
@@ -147,7 +181,7 @@
         <h2>精準洞察，成就您的財務成功</h2>
         <p>專業的會計、稅務、財務顧問、公司秘書服務，助您的企業蓬勃發展。</p>
         <div class="nav-button">
-            <a href="Com%20Sec%20Index.html">了解我們的秘書服務</a>
+            <a href="Com%20Sec%20Index.html">了解我們的公司秘書服務</a>
         </div>
     </section>
 
@@ -159,11 +193,11 @@
     <!-- 關於我們 -->
     <section class="about-us">
         <h2>關於我們</h2>
-        <p>精準會計師事務所有限公司作為一家新成立的會計師事務所，我們秉持專業、專注的理念，致力於為客戶提供創新且貼心的服務。</p>
+        <p>精準會計師事務所有限公司秉持專業、專注的理念，致力於為客戶提供創新且貼心的服務。</p>
         <p>我們的專業團隊擁有豐富的經驗與專業知識，能夠滿足各行各業的需求。我們的服務範疇涵蓋審計、會計、稅務諮詢及其他相關業務，致力於為客戶提供高效、精準的解決方案，助力他們在日益複雜的商業環境中脫穎而出。</p>
         <p>我們深信，與客戶建立緊密的合作關係是成功的關鍵。因此，我們以量身打造的專業服務為核心，針對每位客戶的具體需求，提供個性化的建議與支援，幫助他們實現業務目標。</p>
-        <p>作為一家擁有國際視野的新興會計師事務所，我們不僅專注於本地市場，也積極探索全球機遇，確保為客戶提供符合國際標準的專業服務。</p>
-        <p>選擇精準會計師事務所，意味著選擇了一個值得信賴的合作夥伴。我們將以專業、創新和誠信的態度，助您邁向成功的未來。</p>
+        <p>作為一家擁有國際視野的會計師事務所，我們不僅專注於本地市場，也積極探索全球機遇，確保為客戶提供符合國際標準的專業服務。</p>
+        <p>選擇精準會計師事務所有限公司，意味著選擇了一個值得信賴的合作夥伴。我們將以專業、創新和誠信的態度，助您邁向成功的未來。</p>
     </section>
 
     <!-- 服務介紹 -->
@@ -189,9 +223,19 @@
         </div>
     </section>
 
+    <!-- 提交框 -->
+    <section class="email-form">
+        <p>留下您的姓名和電子郵件，我們將與您聯繫以提供專業服務！</p>
+        <form action="https://docs.google.com/forms/d/e/1FAIpQLSdIiVa9_s88tyVzmV09RDwdsCXhIxhjaLkjbfRNhV-1kGrYTQ/formResponse" method="POST" target="_blank">
+            <input type="text" name="entry.2065450936" placeholder="輸入您的姓名" required>
+            <input type="email" name="entry.1491279996" placeholder="輸入您的電子郵件" required>
+            <input type="submit" value="提交">
+        </form>
+    </section>
+
     <!-- 頁腳 -->
     <footer class="footer">
-        <p>電郵：timtsang@pinscpa.co</p>
+        <p>電郵：timtsang@pinscpa.com</p>
         <p>電話：(852) 98342680</p>
         <p>地址：香港九龍土瓜灣道84號環凱廣場10樓1003室</p>
     </footer>
