Com Sec Index.html

--- a/Com Sec Index.html
+++ b/Com Sec Index.html
@@ -106,7 +106,7 @@
         <h2>專業公司秘書服務</h2>
         <p>提供高效、合規的秘書服務，助力您的企業成功。</p>
         <div class="nav-button">
-            <a href="Precision.html">返回精準會計師事務所</a>
+            <a href="Precision.html">返回精準會計師事務所有限公司</a>
         </div>
     </section>
 
@@ -121,7 +121,7 @@
         <h3>公司成立</h3>
         <ul>
             <li>成立多種類型的香港公司，包括股份有限公司、有限責任合夥公司、合夥公司及獨資經營。</li>
-            <li>成立離岸公司，涵蓋英屬維爾京群島、開曼群島、薩摩亞及塞舌爾等司法管轄區。</li>
+            <li>成立離岸公司，涵蓋英屬維爾京群島、開曼群島等司法管轄區。</li>
             <li>協助向公司註冊處登記非香港公司，以便在香港開展業務。</li>
             <li>協助申請商業登記證。</li>
             <li>協助開設銀行戶口，包括準備董事會決議及驗證所需公司文件副本。</li>
@@ -153,9 +153,10 @@
 
     <!-- 頁腳 -->
     <footer class="footer">
-        <p>電郵：timtsang@pinscpa.co</p>
+        <p>電郵：timtsang@pinscpa.com</p>
         <p>電話：(852) 98342680</p>
         <p>地址：香港九龍土瓜灣道84號環凱廣場10樓1003室</p>
     </footer>
 </body>
 </html>
+
